manifests/apps/portainer/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: portainer
  namespace: portainer
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "9000"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9000"
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
        - ports:
            - port: "9001"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
